--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "dependencies": {
     "@nuxt/image": "1.10.0",
     "netlify-cli": "^20.0.2",
+    "nitropack": "2.11.9",
     "nuxt": "^3.16.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
-  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
+  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b",
+  "pnpm": {
+    "patchedDependencies": {
+      "nitropack": "patches/nitropack.patch"
+    }
+  }
 }
